Correccion calculo de duracion en dias de una reserva de plan turistico

--- a/app/views/salidas/show.html.erb
+++ b/app/views/salidas/show.html.erb
@@ -157,7 +157,7 @@
   						</div>
 					</div>
 					<div id="tm-form-footer">
-						<%= link_to 'Regresar', salidas_path, class:"button back" %> |
+						<%= link_to 'Regresar', @paqueteTuristico, class:"button back" %> |
 						<%= link_to 'Modificar', edit_salida_path(@salida), class:"button edit" %>
 					</div>
 				</div>
