Actualizacion de planes del index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,11 +103,11 @@
 			    </li-->
 			    <li>
 				    <div class="tm-banner-inner">
-						<h1 class="tm-banner-title">Reconforta tu <span class="tm-yellow-text">espíritu</span></h1>
-						<p class="tm-banner-subtitle">Maravillosos destinos</p>
-						<a href="#more" class="tm-banner-link">Leer Más</a>	
+						<h1 class="tm-banner-title">Avistamiento de <span class="tm-yellow-text">Ballenas</span></h1>
+						<p class="tm-banner-subtitle">Julio a Octubre de 2017</p>
+						<a href="/paquete_turisticos/2/detalle_plan" class="tm-banner-link">Leer Más</a>	
 					</div>
-			      <%= image_tag("slideshow/banner-2.jpg", alt: "Bahía Solano") %>
+			      <%= image_tag("planes/yubarta.jpg", alt: "Bahía Solano") %>
 			    </li>
 			    <li>
 				    <div class="tm-banner-inner">
