--- a/app/views/about/admon.html.erb
+++ b/app/views/about/admon.html.erb
@@ -7,6 +7,7 @@
 				</div>
 				<div id="content-wrapper">
 					<div class="col-lg-12 col-md-12">
+						<p>&nbsp;</p>
 						<ul class="nav nav-tabs tm-white-bg" role="tablist" id="generalTabs">
 						    <li role="presentation" class="active">
 						    	<a href="#turismo" aria-controls="hotel" role="tab" data-toggle="tab">TURISMO</a>
@@ -153,7 +154,7 @@
 													</li>
 													<li>
 								                        <a href="<%= empresas_path %>">
-								                            <span class="ca-icon"><i class="fa fa-bank"></i></span>
+								                            <span class="ca-icon"><i class="fa fa-building-o"></i></span>
 								                            <div class="ca-content">
 								                                <h2 class="ca-main">Empresas</h2>
 								                                <h3 class="ca-sub">Información básica</h3>
@@ -326,6 +327,15 @@
 								                            </div>
 								                        </a>
 													</li>
+													<li>
+								                        <a href="<%= causals_path %>">
+								                            <span class="ca-icon"><i class="fa fa-home"></i></span>
+								                            <div class="ca-content">
+								                                <h2 class="ca-main">Home</h2>
+								                                <h3 class="ca-sub">Editar contenido</h3>
+								                            </div>
+								                        </a>
+													</li>
 												</ul>
 											</div>
 										</div>
@@ -333,11 +343,7 @@
 								</div>
 							</div>
 					</div>
-					
-
-
-
-
+					<p>&nbsp;</p>
 					<div class="section-footer">
 						<%= link_to 'Inicio', home_path , class:"button home" %>
 					</div>
